--- a/web-healthy/styles/styles.css
+++ b/web-healthy/styles/styles.css
@@ -688,7 +688,7 @@ ul {
     height: 1.9666666667rem;
     display: block;
     position: absolute;
-    background-image: url(../images/疾病风险切图/1search.png);
+    background-image: url(../images/C/1search.png);
     background-size: 100% 100%;
     background-color: #fff;
     right: 2.8333333333rem;
@@ -702,7 +702,7 @@ ul {
     height: 1.5333333333rem;
     line-height: 1.5333333333rem;
     background: #e8e8e8;
-    font-size: 0.6rem;
+    font-size: 0.8rem;
     color: rgba(35, 24, 21, 0.8); }
   .list-all span:first-child {
     margin: 0 11.6666666667rem 0 6.5333333333rem; }
@@ -711,7 +711,7 @@ ul {
     float: left; }
     .list-all .left li {
       height: 1.9333333333rem;
-      font-size: 0.6rem;
+      font-size: 0.8rem;
       color: rgba(35, 24, 21, 0.8);
       line-height: 2.0666666667rem;
       overflow: hidden;
@@ -775,6 +775,10 @@ ul {
       background-image: url(../images/bluepiont.png); }
     .list-all .right-detial .blue span {
       color: #2E77C3; }
+    .list-all .right-detial .black:before {
+      background-image: url(../images/bluepiont.png); }
+    .list-all .right-detial .black span {
+      color: #6C6C6C; }
 
 .second-header-2 .bg {
   display: block;
@@ -923,7 +927,7 @@ ul {
       position: relative;
       box-sizing: border-box;
       margin-bottom: 0.2rem;
-      background-image: url(../images/安全切图/xuanxiang.png);
+      background-image: url(../images/A/xuanxiang.png);
       background-size: 100% 100%;
       box-shadow: 0.0666666667rem 0.0666666667rem 0.1rem rgba(0, 0, 0, 0.15); }
       .medication .right-detial li.active {
@@ -1228,7 +1232,7 @@ ul {
   position: absolute;
   top: 5.9rem;
   left: 4.0666666667rem;
-  background-image: url(../images/疾病风险切图/2red-line.png);
+  background-image: url(../images/C/2red-line.png);
   background-size: 100% 100%;
   z-index: 3;
   opacity: .6; }
@@ -1270,58 +1274,58 @@ ul {
     background: linear-gradient(to right, #f6722b, #f6a960); }
 
 .about-yellow {
-  background-image: url(../images/单基因切图/2-1icon1.png); }
+  background-image: url(../images/B/2-1icon1.png); }
 
 .know-yellow {
-  background-image: url(../images/单基因切图/2-1icon2.png); }
+  background-image: url(../images/B/2-1icon2.png); }
 
 .site-yellow {
-  background-image: url(../images/单基因切图/2-1icon3.png); }
+  background-image: url(../images/B/2-1icon3.png); }
 
 .slove-yellow {
-  background-image: url(../images/单基因切图/2-1icon4.png); }
+  background-image: url(../images/B/2-1icon4.png); }
 
 .about-green {
-  background-image: url(../images/安全切图/1icon1.png); }
+  background-image: url(../images/A/1icon1.png); }
 
 .know-green {
-  background-image: url(../images/安全切图/1icon2.png); }
+  background-image: url(../images/A/1icon2.png); }
 
 .site-green {
-  background-image: url(../images/安全切图/1icon3.png); }
+  background-image: url(../images/A/1icon3.png); }
 
 .slove-green {
-  background-image: url(../images/安全切图/1icon4.png); }
+  background-image: url(../images/A/1icon4.png); }
 
 .about-blue {
-  background-image: url(../images/疾病风险切图/2blue-icon1.png); }
+  background-image: url(../images/C/2blue-icon1.png); }
 
 .factor-blue {
-  background-image: url(../images/疾病风险切图/2blue-icon2.png); }
+  background-image: url(../images/C/2blue-icon2.png); }
 
 .advice-blue {
-  background-image: url(../images/疾病风险切图/2blue-icon3.png); }
+  background-image: url(../images/C/2blue-icon3.png); }
 
 .site-blue {
-  background-image: url(../images/疾病风险切图/2blue-icon4.png); }
+  background-image: url(../images/C/2blue-icon4.png); }
 
 .basic-blue {
-  background-image: url(../images/疾病风险切图/2blue-icon5.png); }
+  background-image: url(../images/C/2blue-icon5.png); }
 
 .about-red {
-  background-image: url(../images/疾病风险切图/2red-icon1.png); }
+  background-image: url(../images/C/2red-icon1.png); }
 
 .factor-red {
-  background-image: url(../images/疾病风险切图/2red-icon2.png); }
+  background-image: url(../images/C/2red-icon2.png); }
 
 .advice-red {
-  background-image: url(../images/疾病风险切图/2red-icon3.png); }
+  background-image: url(../images/C/2red-icon3.png); }
 
 .site-red {
-  background-image: url(../images/疾病风险切图/2red-icon4.png); }
+  background-image: url(../images/C/2red-icon4.png); }
 
 .basic-red {
-  background-image: url(../images/疾病风险切图/2red-icon5.png); }
+  background-image: url(../images/C/2red-icon5.png); }
 
 .line-con {
   padding-top: 0.4rem;
