--- a/web-healthy/styles/scss/_ty.scss
+++ b/web-healthy/styles/scss/_ty.scss
@@ -305,7 +305,7 @@ ul {
         height: rem(59);
         display: block;
         position: absolute;
-        background-image: url(../images/疾病风险切图/1search.png);
+        background-image: url(../images/C/1search.png);
         background-size: 100% 100%;
         background-color: #fff;
         right: rem(85);
@@ -644,7 +644,7 @@ ul {
             position: relative;
             box-sizing: border-box;
             margin-bottom: rem(6);
-            background-image: url(../images/安全切图/xuanxiang.png);
+            background-image: url(../images/A/xuanxiang.png);
             background-size: 100% 100%;
             box-shadow: rem(2) rem(2) rem(3) rgba(0, 0, 0, .15);
 
@@ -1074,7 +1074,7 @@ ul {
         position: absolute;
         top: rem(177);
         left: rem(122);
-        background-image: url(../images/疾病风险切图/2red-line.png);
+        background-image: url(../images/C/2red-line.png);
         background-size: 100% 100%;
         z-index: 3;
         opacity: .6;
@@ -1141,76 +1141,76 @@ ul {
 }
 
 .about-yellow {
-    background-image: url(../images/单基因切图/2-1icon1.png);
+    background-image: url(../images/B/2-1icon1.png);
 }
 
 .know-yellow {
-    background-image: url(../images/单基因切图/2-1icon2.png);
+    background-image: url(../images/B/2-1icon2.png);
 }
 
 .site-yellow {
-    background-image: url(../images/单基因切图/2-1icon3.png);
+    background-image: url(../images/B/2-1icon3.png);
 }
 
 .slove-yellow {
-    background-image: url(../images/单基因切图/2-1icon4.png);
+    background-image: url(../images/B/2-1icon4.png);
 }
 
 .about-green {
-    background-image: url(../images/安全切图/1icon1.png);
+    background-image: url(../images/A/1icon1.png);
 }
 
 .know-green {
-    background-image: url(../images/安全切图/1icon2.png);
+    background-image: url(../images/A/1icon2.png);
 }
 
 .site-green {
-    background-image: url(../images/安全切图/1icon3.png);
+    background-image: url(../images/A/1icon3.png);
 }
 
 .slove-green {
-    background-image: url(../images/安全切图/1icon4.png);
+    background-image: url(../images/A/1icon4.png);
 }
 
 
 .about-blue {
-    background-image: url(../images/疾病风险切图/2blue-icon1.png);
+    background-image: url(../images/C/2blue-icon1.png);
 }
 
 .factor-blue {
-    background-image: url(../images/疾病风险切图/2blue-icon2.png);
+    background-image: url(../images/C/2blue-icon2.png);
 }
 
 .advice-blue {
-    background-image: url(../images/疾病风险切图/2blue-icon3.png);
+    background-image: url(../images/C/2blue-icon3.png);
 }
 
 .site-blue {
-    background-image: url(../images/疾病风险切图/2blue-icon4.png);
+    background-image: url(../images/C/2blue-icon4.png);
 }
 
 .basic-blue {
-    background-image: url(../images/疾病风险切图/2blue-icon5.png);
+    background-image: url(../images/C/2blue-icon5.png);
 }
 
 .about-red {
-    background-image: url(../images/疾病风险切图/2red-icon1.png);
+    background-image: url(../images/C/2red-icon1.png);
 }
 
 .factor-red {
-    background-image: url(../images/疾病风险切图/2red-icon2.png);
+    background-image: url(../images/C/2red-icon2.png);
 }
 
 .advice-red {
-    background-image: url(../images/疾病风险切图/2red-icon3.png);
+    background-image: url(../images/C/2red-icon3.png);
 }
 
 .site-red {
-    background-image: url(../images/疾病风险切图/2red-icon4.png);
+    background-image: url(../images/C/2red-icon4.png);
 }
 
 .basic-red {
-    background-image: url(../images/疾病风险切图/2red-icon5.png);
+    background-image: url(../images/C/2red-icon5.png);
 }
 
 .line-con {
