--- a/web-nutrition/styles/scss/_ty.scss
+++ b/web-nutrition/styles/scss/_ty.scss
@@ -191,6 +191,7 @@ body {
             font-size: rem(20);
             color: rgba(254, 147, 102, 1);
             text-align: center;
+            white-space: nowrap;
         }
 
         em {
