--- a/web-tsu3/styles/scss/_ty.scss
+++ b/web-tsu3/styles/scss/_ty.scss
@@ -21,7 +21,8 @@ body {
   position: fixed;
   top: 50%;
   margin-top: -145px;
-  left: 20px;
+  right: 50%;
+  margin-right: 520px;
   box-shadow: 0 0 5px 5px rgba(0, 0, 0, .1);
   z-index: 9;
 
@@ -192,7 +193,9 @@ body {
   line-height: 24px;
 }
 
-.ty-rec {
+.warp .ty-rec {
+  width: 940px;
+  padding-left: 60px;
   height: 500px;
   position: relative;
 
@@ -323,6 +326,7 @@ body {
   }
   .l {
     float: left;
+    padding-left: 60px;
 
     ul {
       overflow: hidden;
@@ -366,7 +370,6 @@ body {
       background: rgba(155, 78, 159, 1);
       border-radius: 45px;
       font-size: 18px;
-      font-weight: bold;
       color: rgba(255, 255, 255, 1);
       text-align: center;
     }
@@ -400,6 +403,8 @@ body {
 
   .in {
     margin-left: 509+18px;
+    position: relative;
+    z-index: 3;
 
     .title-min {
       padding: 36px 0 16px;
@@ -438,6 +443,8 @@ body {
 }
 
 footer {
+  width: 1000px;
+  margin: 0 auto;
   img {
     display: block;
     width: 100%;
@@ -448,6 +455,13 @@ footer {
   width: 880px;
   padding: 0 60px;
   margin-bottom: 40px;
+  position: relative;
+
+  > img {
+    position: absolute;
+    right: 0;
+    top: 0px;
+  }
 
   .title-min {
     margin-bottom: 20px;
@@ -693,6 +707,7 @@ footer {
       width: 400px;
       font-size: 12px;
       color: rgba(131, 131, 131, 1);
+      line-height: 1.8;
     }
   }
 }
@@ -731,14 +746,14 @@ footer {
       width: 180px;
       font-size: 12px;
       color: rgba(0, 0, 0, .6);
-      line-height: 18px;
+      line-height: 24px;
 
       h3 {
         text-align: center;
         font-size: 16px;
         font-weight: bold;
         color: rgba(121, 32, 113, 1);
-        margin-bottom: 6px;
+        margin-bottom: 12px;
       }
     }
   }
@@ -798,12 +813,13 @@ footer {
         }
 
         .p1 {
-          width: 70px;
+          width: 75px;
           background: #fff;
           position: absolute;
           left: 0;
           top: 100px;
           padding-left: 5px;
+          padding-top: 6px;
 
           em {
             font-size: 14px;
@@ -813,6 +829,7 @@ footer {
           }
 
           span {
+            display: block;
             font-size: 12px;
             color: rgba(0, 0, 0, 1);
             line-height: 12px;
@@ -840,6 +857,7 @@ footer {
 
     .in {
       float: left;
+      margin-left: 26px;
       margin-right: 60px;
       position: relative;
       z-index: 3;
@@ -1022,15 +1040,15 @@ footer {
           position: relative;
           z-index: 3;
 
-          &:nth-child(2) {
+          &:nth-child(3) {
             width: 155px;
           }
 
-          &:nth-child(3) {
+          &:nth-child(4) {
             width: 125px;
           }
 
-          &:nth-child(4) {
+          &:nth-child(5) {
             width: 145px;
           }
         }
@@ -1083,6 +1101,15 @@ footer {
 }
 
 .type-2 {
+  .ty-time {
+    > .r {
+      background:rgba(235,226,212,1);
+
+      a {
+        background:rgba(190,29,40,1);
+      }
+    }
+  }
   .itools {
     >a {
       background: #A7212F;
@@ -1129,7 +1156,7 @@ footer {
     span {
       font-size: 14px;
       margin-left: 12px;
-
+      font-weight: normal;
     }
   }
 
@@ -1246,6 +1273,7 @@ footer {
       }
 
       h4 {
+        margin-bottom: 12px;
         font-size: 18px;
         font-weight: bold;
         color: rgba(167, 33, 47, 1);
@@ -1294,6 +1322,14 @@ footer {
 
   .ty-progress {
     position: relative;
+
+    >img {
+      position: absolute;
+      z-index: 2;
+      right: 0;
+      top: -20px;
+      z-index: -1;
+    }
 
     .p {
       position: absolute;
