--- a/web-tsu3/styles/scss/_ty.scss
+++ b/web-tsu3/styles/scss/_ty.scss
@@ -274,6 +274,7 @@ body {
 }
 
 .warp .ty-time {
+  clear: both;
   margin-bottom: 70px;
   overflow: hidden;
 
@@ -799,6 +800,7 @@ footer {
       li {
         position: relative;
         float: left;
+        overflow: hidden;
 
         &:last-child {
           margin-right: 0;
@@ -843,6 +845,8 @@ footer {
     padding-top: 70px;
     position: relative;
     height: 590px;
+    padding-left: 60px;
+    width: 940px;
 
     >img {
       position: absolute;
@@ -1408,7 +1412,7 @@ footer {
       }
 
       .in {
-        overflow: hidden;
+        height: 123px;
       }
 
       a {
@@ -1423,6 +1427,11 @@ footer {
         text-indent: 148px;
         background-size: 100% 100%;
         margin-right: 20px;
+        transition: all .3s;
+
+        &:hover {
+          box-shadow: 0 0 12px 12px rgba(0, 0, 0, .2);
+        }
 
         &:nth-child(1) {
           background-image: url(../images/2-6.png);
@@ -1537,4 +1546,8 @@ footer {
       }
     }
   }
+}
+
+.type-2 .warp .ty-rec>img {
+  top: -20px;
 }
